# ProjectEuler

./: Cargo.toml  Problem1.rs  Problem10.rs  Problem16.rs  Problem2.rs  Problem20.rs  Problem3.rs  Problem5.rs  Problem6.rs  Problem7.rs  README.md
src/: Problem1.rs  Problem10.rs  Problem12.rs  Problem14.rs  Problem24.rs  Problem25.rs  Problem29.rs  Problem3.rs  Problem48.rs  Problem5.rs  Problem7.rs
src/Crystal/: Problem1.cr  Problem2.cr  Problem5.cr  Problem6.cr
src/JavaScript/: Problem???.js
src/Rust/: Problem12.rs  Problem2.rs  Problem20.rs  Problem24.rs  Problem29.rs  Problem6.rs  Problem7.rs
